# cardano-ledger

./: .dir-locals.el  .editorconfig  .flake.nix.swp  .git-blame-ignore-revs  .git-fsck-skiplist  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .stack-to-nix.cache  .stylish-haskell.yaml  .travis.yml  CDDL-DEDUPLICATION-NOTES.md  CHANGELOG.md  CNAME  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  ChangeLog.md  DEDUPLICATION-PHASE2.md  HowToProfileLedger.md  Leios.md  NOTICE  README.md  README.rst  RELEASING.md  REVISIONING.md  SECURITY.md  alonzo  bors.toml  byron  cabal.project  cardano-chain.cabal  cardano-ledger-alonzo-test  cardano-ledger-core  cardano-ledger-test  cardano-ledger.cabal  cardano-protocol-tpraos  default.nix  doc-index-124.html  (+69 more)
alonzo/impl/: .ghcid  cardano-ledger-alonzo.cabal
binary/: cardano-binary.cabal  stack.yaml
binary/test/: cardano-binary-test.cabal  test.hs
byron/crypto/: README.md  cardano-crypto-wrapper.cabal
cardano-ledger-core/: Cardano-Ledger-Address.html  Cardano-Ledger-Ap.html  Cardano-Ledger-AuxiliaryData.html  Cardano-Ledger-BHeaderView.html  Cardano-Ledger-BaseTypes-NonZero.html  Cardano-Ledger-BaseTypes.html  Cardano-Ledger-Block.html  Cardano-Ledger-CertState.html  Cardano-Ledger-Coin.html  Cardano-Ledger-Compactible.html  Cardano-Ledger-Core-Era.html  Cardano-Ledger-Core-PParams.html  Cardano-Ledger-Core-Translation.html  Cardano-Ledger-Core-TxCert.html  Cardano-Ledger-Core.html  Cardano-Ledger-Credential.html  Cardano-Ledger-Crypto-Internal.html  Cardano-Ledger-Crypto.html  Cardano-Ledger-DRep.html  Cardano-Ledger-EpochBoundary.html  Cardano-Ledger-Era.html  Cardano-Ledger-Genesis.html  Cardano-Ledger-HKD.html  Cardano-Ledger-Hashes.html  Cardano-Ledger-Keys-Bootstrap.html  Cardano-Ledger-Keys-Internal.html  Cardano-Ledger-Keys-WitVKey.html  Cardano-Ledger-Keys.html  Cardano-Ledger-Language.html  Cardano-Ledger-MemoBytes-Internal.html  Cardano-Ledger-MemoBytes.html  Cardano-Ledger-Metadata.html  Cardano-Ledger-Orphans.html  Cardano-Ledger-Plutus-CostModels.html  Cardano-Ledger-Plutus-Data.html  Cardano-Ledger-Plutus-Evaluate.html  Cardano-Ledger-Plutus-ExUnits.html  Cardano-Ledger-Plutus-Language.html  Cardano-Ledger-Plutus-ToPlutusData.html  Cardano-Ledger-Plutus-TxInfo.html  (+53 more)
cardano-ledger-core/src/: Cardano.Ledger.Address.html  Cardano.Ledger.Ap.html  Cardano.Ledger.AuxiliaryData.html  Cardano.Ledger.BHeaderView.html  Cardano.Ledger.BaseTypes.NonZero.html  Cardano.Ledger.BaseTypes.html  Cardano.Ledger.Block.html  Cardano.Ledger.CertState.html  Cardano.Ledger.Coin.html  Cardano.Ledger.Compactible.html  Cardano.Ledger.Core.Era.html  Cardano.Ledger.Core.PParams.html  Cardano.Ledger.Core.Translation.html  Cardano.Ledger.Core.TxCert.html  Cardano.Ledger.Core.html  Cardano.Ledger.Credential.html  Cardano.Ledger.Crypto.Internal.html  Cardano.Ledger.Crypto.html  Cardano.Ledger.DRep.html  Cardano.Ledger.EpochBoundary.html  Cardano.Ledger.Era.html  Cardano.Ledger.Genesis.html  Cardano.Ledger.HKD.html  Cardano.Ledger.Hashes.html  Cardano.Ledger.Keys.Bootstrap.html  Cardano.Ledger.Keys.Internal.html  Cardano.Ledger.Keys.WitVKey.html  Cardano.Ledger.Keys.html  Cardano.Ledger.Language.html  Cardano.Ledger.MemoBytes.Internal.html  Cardano.Ledger.MemoBytes.html  Cardano.Ledger.Metadata.html  Cardano.Ledger.Orphans.html  Cardano.Ledger.Plutus.CostModels.html  Cardano.Ledger.Plutus.Data.html  Cardano.Ledger.Plutus.Evaluate.html  Cardano.Ledger.Plutus.ExUnits.html  Cardano.Ledger.Plutus.Language.html  Cardano.Ledger.Plutus.ToPlutusData.html  Cardano.Ledger.Plutus.TxInfo.html  (+24 more)
cardano-ledger-test/: CHANGELOG.md  Test-Cardano-Ledger-Alonzo-Tools.html  Test-Cardano-Ledger-Constrained-Ast.html  Test-Cardano-Ledger-Constrained-Classes.html  Test-Cardano-Ledger-Constrained-Combinators.html  Test-Cardano-Ledger-Constrained-Conway-Cert.html  Test-Cardano-Ledger-Constrained-Conway-Certs.html  Test-Cardano-Ledger-Constrained-Conway-Deleg.html  Test-Cardano-Ledger-Constrained-Conway-Epoch.html  Test-Cardano-Ledger-Constrained-Conway-Gov.html  Test-Cardano-Ledger-Constrained-Conway-GovCert.html  Test-Cardano-Ledger-Constrained-Conway-Instances-Basic.html  Test-Cardano-Ledger-Constrained-Conway-Instances-Ledger.html  Test-Cardano-Ledger-Constrained-Conway-Instances-Ledgers.html  Test-Cardano-Ledger-Constrained-Conway-Instances-PParams.html  Test-Cardano-Ledger-Constrained-Conway-Instances-TxBody.html  Test-Cardano-Ledger-Constrained-Conway-Instances.html  Test-Cardano-Ledger-Constrained-Conway-InstancesBasic.html  Test-Cardano-Ledger-Constrained-Conway-Ledger.html  Test-Cardano-Ledger-Constrained-Conway-LedgerTypes-Specs.html  Test-Cardano-Ledger-Constrained-Conway-LedgerTypes-Tests.html  Test-Cardano-Ledger-Constrained-Conway-LedgerTypes-WellFormed.html  Test-Cardano-Ledger-Constrained-Conway-Ledgers.html  Test-Cardano-Ledger-Constrained-Conway-MiniTrace.html  Test-Cardano-Ledger-Constrained-Conway-NewEpoch.html  Test-Cardano-Ledger-Constrained-Conway-PParams.html  Test-Cardano-Ledger-Constrained-Conway-ParametricSpec.html  Test-Cardano-Ledger-Constrained-Conway-Pool.html  Test-Cardano-Ledger-Constrained-Conway-SimplePParams.html  Test-Cardano-Ledger-Constrained-Conway-TxBodySpec.html  Test-Cardano-Ledger-Constrained-Conway-Utxo.html  Test-Cardano-Ledger-Constrained-Conway-WitnessUniverse.html  Test-Cardano-Ledger-Constrained-Conway.html  Test-Cardano-Ledger-Constrained-Env.html  Test-Cardano-Ledger-Constrained-Examples.html  Test-Cardano-Ledger-Constrained-Lenses.html  Test-Cardano-Ledger-Constrained-Monad.html  Test-Cardano-Ledger-Constrained-Pairing.html  Test-Cardano-Ledger-Constrained-Preds-CertState.html  Test-Cardano-Ledger-Constrained-Preds-Certs.html  (+101 more)
cardano-ledger-test/bench/: Main.hs
crypto/: README.md  cardano-crypto-wrapper.cabal  stack.yaml
prelude/: README.md  cardano-prelude.cabal  stack.yaml
test/: NormalFormTest.hs  cardano-chain-test.cabal  cardano-ledger-test.cabal  test.hs
util/: ChangeLog.md  README.md  cardano-util.cabal  stack.yaml
validate-mainnet/: bulk-chain-validation.cabal  validate-mainnet.cabal
(+9118 files in other folders)
