name:                cardano-ledger
version:             0.1.0.0
synopsis:            The blockchain layer of Cardano
description:         The blockchain layer of Cardano
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Chain.Block
                       Cardano.Chain.Common
                       Cardano.Chain.Constants
                       Cardano.Chain.Delegation
                       Cardano.Chain.Epoch.File
                       Cardano.Chain.Genesis
                       Cardano.Chain.ProtocolConstants
                       Cardano.Chain.Slotting
                       Cardano.Chain.Ssc
                       Cardano.Chain.Txp
                       Cardano.Chain.Update

  other-modules:
                       Cardano.Chain.Block.Block
                       Cardano.Chain.Block.Body
                       Cardano.Chain.Block.Boundary
                       Cardano.Chain.Block.ExtraBodyData
                       Cardano.Chain.Block.ExtraHeaderData
                       Cardano.Chain.Block.Header
                       Cardano.Chain.Block.Proof
                       Cardano.Chain.Block.SlogUndo
                       Cardano.Chain.Block.Undo
                       Cardano.Chain.Block.Validation

                       Cardano.Chain.Common.AddrAttributes
                       Cardano.Chain.Common.AddrSpendingData
                       Cardano.Chain.Common.Address
                       Cardano.Chain.Common.AddressHash
                       Cardano.Chain.Common.Attributes
                       Cardano.Chain.Common.BlockCount
                       Cardano.Chain.Common.ChainDifficulty
                       Cardano.Chain.Common.Lovelace
                       Cardano.Chain.Common.LovelacePortion
                       Cardano.Chain.Common.Merkle
                       Cardano.Chain.Common.StakeholderId
                       Cardano.Chain.Common.TxFeePolicy
                       Cardano.Chain.Common.TxSizeLinear

                       Cardano.Chain.Delegation.Certificate
                       Cardano.Chain.Delegation.Payload
                       Cardano.Chain.Delegation.Undo
                       Cardano.Chain.Delegation.Validation

                       Cardano.Chain.Genesis.AvvmBalances
                       Cardano.Chain.Genesis.Config
                       Cardano.Chain.Genesis.Data
                       Cardano.Chain.Genesis.Delegation
                       Cardano.Chain.Genesis.Generate
                       Cardano.Chain.Genesis.Hash
                       Cardano.Chain.Genesis.Initializer
                       Cardano.Chain.Genesis.NonAvvmBalances
                       Cardano.Chain.Genesis.Spec
                       Cardano.Chain.Genesis.WStakeholders

                       Cardano.Chain.Slotting.Data
                       Cardano.Chain.Slotting.EpochIndex
                       Cardano.Chain.Slotting.EpochSlots
                       Cardano.Chain.Slotting.LocalSlotIndex
                       Cardano.Chain.Slotting.SlotId

                       Cardano.Chain.Txp.GenesisUTxO
                       Cardano.Chain.Txp.Tx
                       Cardano.Chain.Txp.TxAux
                       Cardano.Chain.Txp.TxOutAux
                       Cardano.Chain.Txp.TxPayload
                       Cardano.Chain.Txp.TxpConfiguration
                       Cardano.Chain.Txp.TxProof
                       Cardano.Chain.Txp.TxWitness
                       Cardano.Chain.Txp.Undo
                       Cardano.Chain.Txp.UTxO
                       Cardano.Chain.Txp.Validation

                       Cardano.Chain.Update.ApplicationName
                       Cardano.Chain.Update.ProtocolVersion
                       Cardano.Chain.Update.ProtocolParameters
                       Cardano.Chain.Update.ProtocolParametersUpdate
                       Cardano.Chain.Update.Data
                       Cardano.Chain.Update.Payload
                       Cardano.Chain.Update.Proof
                       Cardano.Chain.Update.SoftforkRule
                       Cardano.Chain.Update.SoftwareVersion
                       Cardano.Chain.Update.SystemTag
                       Cardano.Chain.Update.Undo
                       Cardano.Chain.Update.Validation.Endorsement
                       Cardano.Chain.Update.Validation.Interface
                       Cardano.Chain.Update.Validation.Registration
                       Cardano.Chain.Update.Validation.Voting
                       Cardano.Chain.Update.Vote

                       Data.Aeson.Options

  build-depends:       base >=4.11 && <5
                     , aeson
                     , base16-bytestring
                     , base58-bytestring
                     , base64-bytestring-type
                     , binary
                     , bytestring
                     , canonical-json
                     , cardano-binary
                     , cardano-crypto-wrapper
                     , cardano-prelude
                     , cborg
                     , containers
                     , cryptonite
                     , Cabal
                     , directory
                     , filepath
                     , formatting
                     , lens
                     , memory
                     , mtl
                     , resourcet
                     , streaming
                     , streaming-binary
                     , streaming-bytestring
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror

test-suite cardano-ledger-test
  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  other-modules:

                       Test.Cardano.Chain.Block.Bi
                       Test.Cardano.Chain.Block.Gen
                       Test.Cardano.Chain.Block.Validation

                       Test.Cardano.Chain.Block.Validation.Spec

                       Test.Cardano.Chain.Common.Example
                       Test.Cardano.Chain.Common.Gen
                       Test.Cardano.Chain.Common.Lovelace
                       Test.Cardano.Chain.Config

                       Test.Cardano.Chain.Delegation.Bi
                       Test.Cardano.Chain.Delegation.Example
                       Test.Cardano.Chain.Delegation.Gen

                       Test.Cardano.Chain.Elaboration.Block
                       Test.Cardano.Chain.Elaboration.Delegation
                       Test.Cardano.Chain.Elaboration.Keys

                       Test.Cardano.Chain.Epoch.File

                       Test.Cardano.Chain.Genesis.Dummy
                       Test.Cardano.Chain.Genesis.Example
                       Test.Cardano.Chain.Genesis.Gen
                       Test.Cardano.Chain.Genesis.Json

                       Test.Cardano.Chain.Ssc.Bi

                       Test.Cardano.Chain.Slotting.Example
                       Test.Cardano.Chain.Slotting.Gen
                       Test.Cardano.Chain.Slotting.Properties

                       Test.Cardano.Chain.Txp.Bi
                       Test.Cardano.Chain.Txp.Example
                       Test.Cardano.Chain.Txp.Gen
                       Test.Cardano.Chain.Txp.Json
                       Test.Cardano.Chain.Txp.Validation

                       Test.Cardano.Chain.Update.Bi
                       Test.Cardano.Chain.Update.Example
                       Test.Cardano.Chain.Update.Gen
                       Test.Cardano.Chain.Update.Json
                       Test.Cardano.Chain.Update.Properties

                       Test.Options

  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , canonical-json
                     , cardano-binary
                     , cardano-binary-test
                     , cardano-ledger
                     , cardano-crypto
                     , cardano-crypto-test
                     , cardano-crypto-wrapper
                     , cardano-mainnet-mirror
                     , cardano-prelude
                     , cardano-prelude-test
                     , containers
                     , cryptonite
                     , cs-blockchain
                     , cs-ledger
                     , directory
                     , filepath
                     , formatting
                     , hedgehog
                     , lens
                     , optparse-applicative
                     , resourcet
                     , small-steps
                     , streaming
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror
