name:                cardano-binary
version:             1.5.0
synopsis:            Binary serialization for Cardano
description:         This package defines a type class for binary serialization,
                     helpers and instances.
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Binary.Class
                       Cardano.Binary.Limit
                       Cardano.Binary.ToCBOR
                       Cardano.Binary.FromCBOR
                       Cardano.Binary.EvilInstances

  other-modules:
                       Cardano.Binary.Class.Core
                       Cardano.Binary.Class.Drop
                       Cardano.Binary.Class.Primitive
                       Cardano.Binary.Class.Annotated

  build-depends:     base
                     , aeson
                     , bytestring
                     , cardano-prelude
                     , cborg
                     , containers
                     , digest
                     , formatting
                     , lens
                     , micro-recursion-schemes
                     , mtl
                     , safe-exceptions
                     , tagged
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror

test-suite test
  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  other-modules:
                       Test.Cardano.Binary.Bi
                       Test.Cardano.Binary.BiSizeBounds
                       Test.Cardano.Binary.Helpers
                       Test.Cardano.Binary.Helpers.GoldenRoundTrip

  build-depends:       base
                     , bytestring
                     , cardano-binary
                     , cardano-prelude
                     , cardano-prelude-test
                     , cborg
                     , cereal
                     , containers
                     , formatting
                     , half
                     , hedgehog
                     , hspec
                     , mtl
                     , pretty-show
                     , QuickCheck
                     , quickcheck-instances
                     , tagged
                     , text

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror

  ghc-options:         -threaded
                       -rtsopts
